--- a/GameChoice/Games/BuildPacman/PacmanGame.html
+++ b/GameChoice/Games/BuildPacman/PacmanGame.html
@@ -62,9 +62,9 @@
         frameworkUrl: buildUrl + "/BuildPacman.framework.js",
         codeUrl: buildUrl + "/BuildPacman.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "VlastniHryCC000",
-        productName: "pajmaj",
-        productVersion: "1.2",
+        companyName: "0805743",
+        productName: "Pacman",
+        productVersion: "1.50",
         showBanner: unityShowBanner,
       };
 
