--- a/GameChoice/Games/pacman.html
+++ b/GameChoice/Games/pacman.html
@@ -8,7 +8,15 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <link rel="icon" type="jpg/png" href="../../pageIcon.png">
   <link rel="stylesheet" type="text/css" href="topnav.css">
-  <link rel="stylesheet" type="text/css" href="gameOptions.css">
+  <link id="CSS" rel="stylesheet" type="text/css" href="gameOptions.css">
+  <script>
+    function detectMob() {
+      return ((window.innerHeight / window.innerWidth) > 1.3);
+    }
+    if(detectMob() == true) {
+      document.getElementById("CSS").href = "gameOptionsMobile.css";
+    }
+  </script>
   <script src="gameOptions.js"></script>
   <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
@@ -24,7 +32,7 @@
       <br>      
       <p class="mainTitle"> Nastavení hry:  </p>
       <div class="games-container">
-        <div class="package" style="height: 25vw;">
+        <div class="package" style="height: 400px;">
           <p class="firstDescriptionTitle"> Pacman </p>
           <p class="firstDescription"> <b> <-- </b>Vyzkoušejte si hru  </p>
           <br>
@@ -33,7 +41,7 @@
           <p class="firstDescription"> Cíl hry: <i> sebrat všechny body </i> </p>
           <iframe class="portrait" src="BuildPacman/PacmanGame.html"> </iframe>  
         </div>
-        <div class="package" style="height: 25vw;">
+        <div class="package" style="height: 400px;">
           <p class="descriptionTitle"> Základní nastavení </p>
           <br>
           <div class="inputLine">
@@ -63,7 +71,7 @@
           <br><br> <br>
 
         </div>
-        <div class="package" style="height: 30vw;">
+        <div class="package" style="height: 600px;">
           <p class="descriptionTitle"> Grafika: </p>
           <div class="inputLine">
             <label for="main">Hlavní postava:</label>
@@ -132,7 +140,7 @@
           </div>
 
         </div>
-        <div class="package" style="height: 25vw;">
+        <div class="package" style="height: 400px;">
           <p class="descriptionTitle"> Zvukové efekty: </p>
           <div class="inputLine">
             <label for="main">Pacman:</label>
@@ -160,14 +168,14 @@
             </audio>            
           </div>
         </div>
-        <div class="package" style="height: 15vw;">
+        <div class="package" style="min-height: 400px;">
           <p class="descriptionTitle"> Herní nastavení: </p>
           <div class="inputLine">
-            <label for="main">Počet bodů:</label>
+            <label for="main">Počet bodů k sesbíraní:</label>
             <select name="inputPlayer" id="PocetBodu">
-              <option value="1">38 (výchozí)</option>
-              <option value="2">28</option>
-              <option value="3">20</option>
+              <option value="1">18 (výchozí)</option>
+              <option value="2">10</option>
+              <option value="3">22</option>
             </select>          
           </div>
           <br><br><br>
@@ -179,7 +187,29 @@
               <option value="3">Pomalá</option>
             </select>          
           </div>
-        </div>      
+          <br><br><br>
+          <div class="inputLine">
+            <label for="main">Dodatečné nastavení (pokud chcete něco dodat k úpravě hry):</label> <br>
+            <textarea id="textInputBox" class="optionalText" name="Text1" cols="40" rows="5"></textarea>     
+          </div>
+        </div> 
+        <div class="package" style="min-height: 300px;">
+          <p class="descriptionTitle"> Nastavení přání: </p>
+          <br><br>
+          <div class="inputLine">
+            <label for="main">Barva pozadí:</label>
+            <select name="inputPlayer" id="Color">
+              <option value="1">Fialová (výchozí)</option>
+              <option value="2">Zelená</option>
+              <option value="3">Modrá</option>
+            </select>          
+          </div>
+          <br><br><br>
+          <div class="inputLine">
+            <label for="main">Text přání:</label> <br>
+            <textarea id="textInputBoxWish" class="optionalText" name="Text1" cols="40" rows="5"></textarea>     
+          </div>
+        </div>           
         <div class="sendButton">
           <button type="button" class="sendButton" onclick="enableLoading()" >   Pokračovat  </button>
         </div>  
