--- a/GameChoice/gameChoice.html
+++ b/GameChoice/gameChoice.html
@@ -9,7 +9,7 @@
 
   </head><body>
     <content>
-      <p class="mainTitle">  Vyberte si šablonu, která se vám líbí  </p>
+      <p class="mainTitle">  Vyberte si hru, která se vám líbí  </p>
       <br>      
   
       <br>
@@ -25,7 +25,7 @@
             </a>
           <div class="TextBox">
             <form action="Games/flappyBird.html">
-              <button> Vybrat šablonu </button>
+              <button> Vybrat hru </button>
             </form>
           </div>
         </div>
@@ -39,7 +39,7 @@
           </a>
           <div class="TextBox">
             <form action="Games/pacman.html">
-              <button> Vybrat šablonu </button>
+              <button> Vybrat hru </button>
             </form>
           </div>
         </div>
@@ -53,34 +53,34 @@
           </a>
           <div class="TextBox">
             <form action="Games/snake.html">
-              <button> Vybrat šablonu </button>
+              <button> Vybrat hru </button>
             </form>
           </div>
         </div>
         <div class="package">
           
           <div class="TextBoxTitle">
-            <p2> <b> Sbírání hub</b> </p2>
+            <p2> <b> Sbírání co nejrychleji</b> </p2>
           </div>
           <a href="Games/BuildCollecting/CollectingGame.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Collecting.png" alt="icon">
           </a>
           <div class="TextBox">
             <form action="Games/collecting.html">
-              <button> Vybrat šablonu </button>
+              <button> Vybrat hru </button>
             </form>
           </div>
         </div>
         <div class="package">
           <div class="TextBoxTitle">
-            <p2> <b> Chytání jablek </b> </p2>
+            <p2> <b> Chytání do košíku</b> </p2>
           </div>
           <a href="Games/BuildCatching/CatchingGame.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Catching.png" alt="icon">
           </a>
           <div class="TextBox">
             <form action="Games/catching.html">
-              <button> Vybrat šablonu </button>
+              <button> Vybrat hru </button>
             </form>
           </div>
         </div>
