--- a/GameChoice/Games/catching.html
+++ b/GameChoice/Games/catching.html
@@ -8,16 +8,23 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <link rel="icon" type="jpg/png" href="../../pageIcon.png">
   <link rel="stylesheet" type="text/css" href="topnav.css">
-  <link rel="stylesheet" type="text/css" href="gameOptions.css">
+  <link id="CSS" rel="stylesheet" type="text/css" href="gameOptions.css">
   <script src="gameOptions.js"></script>
-
+  <script>
+    function detectMob() {
+      return ((window.innerHeight / window.innerWidth) > 1.3);
+    }
+    if(detectMob() == true) {
+      document.getElementById("CSS").href = "gameOptionsMobile.css";
+    }
+  </script>
   </head><body>
 
     <content>
       <br>      
       <p class="mainTitle"> Nastavení hry:  </p>
       <div class="games-container">
-        <div class="package" style="height: 20vw;">
+        <div class="package" style="height: 400px;">
           <p class="firstDescriptionTitle"> Chytání do košíku </p>
           <p class="firstDescription"> <b> <-- </b>Vyzkoušejte si hru  </p>
           <br>
@@ -26,7 +33,7 @@
           <p class="firstDescription"> Cíl hry: <i> sebrat co nejvíce jablek </i> </p>
           <iframe class="landscape" src="BuildCatching/CatchingGame.html"> </iframe>  
         </div>
-        <div class="package" style="height: 25vw;">
+        <div class="package" style="height: 400px;">
           <p class="descriptionTitle"> Základní nastavení </p>
           <br>
           <div class="inputLine">
@@ -55,7 +62,7 @@
           </div>
           <br><br> <br>
         </div>
-        <div class="package" style="height: 25vw;">
+        <div class="package" style="height: 400px;">
           <p class="descriptionTitle"> Grafika: </p>
           <div class="inputLine">
             <label for="main">Padající předmět:</label>
@@ -91,7 +98,7 @@
             <input type="file" class="file" id="inputBackground" name="avatar" accept="image/png, image/jpeg" onchange="onCustomTextureChange('inputBackground', 'backgroundIcon')"/>
           </div>
         </div>
-        <div class="package" style="height: 15vw;">
+        <div class="package" style="height: 250px;">
           <p class="descriptionTitle"> Zvukové efekty: </p>
           <div class="inputLine">
             <label for="main">Zvuk chycení předmětu:</label>
@@ -107,7 +114,7 @@
             </audio>            
           </div>
         </div>
-        <div class="package" style="height: 10vw;">
+        <div class="package" style="min-height: 400px;">
           <p class="descriptionTitle"> Herní nastavení: </p>
           <div class="inputLine">
             <label for="main">Obtížnost:</label>
@@ -116,6 +123,28 @@
               <option value="2">Jednoduchá</option>
               <option value="3">Obtížná</option>
             </select>          
+          </div>
+          <br><br><br>
+          <div class="inputLine">
+            <label for="main">Dodatečné nastavení (pokud chcete něco dodat k úpravě hry):</label> <br>
+            <textarea id="textInputBox" class="optionalText" name="Text1" cols="40" rows="5"></textarea>     
+          </div>
+        </div>  
+        <div class="package" style="min-height: 300px;">
+          <p class="descriptionTitle"> Nastavení přání: </p>
+          <br><br>
+          <div class="inputLine">
+            <label for="main">Barva pozadí:</label>
+            <select name="inputPlayer" id="Color">
+              <option value="1">Fialová (výchozí)</option>
+              <option value="2">Zelená</option>
+              <option value="3">Modrá</option>
+            </select>          
+          </div>
+          <br><br><br>
+          <div class="inputLine">
+            <label for="main">Text přání:</label> <br>
+            <textarea id="textInputBoxWish" class="optionalText" name="Text1" cols="40" rows="5"></textarea>     
           </div>
         </div>  
         <div class="sendButton">
