landing page update + video

--- a/landAdFacebook0.html
+++ b/landAdFacebook0.html
@@ -13,7 +13,7 @@
       return ((window.innerHeight / window.innerWidth) > 1.3);
     }
     if(detectMob() == true) {
-      window.open("indexMobile.html", "_self");
+      window.open("landAdFacebook0Mobile.html", "_self");
     }
   </script>
   </head><body>
@@ -23,7 +23,7 @@
   
 
 
-        <p class="mainTitle"> Co dát blízkému jako dárek? <br> Darujte vlastní hru!</p>
+        <p class="mainTitle"> <b> Co dát blízkému jako dárek? </b> <br> <p class="mainText"> Darujte vlastní hru jako originální dárek!</p>
   
       </div>
       <div class="container">
@@ -35,8 +35,8 @@
             </svg>
           </div>
 
-          <video controls class="video" id="video" preload="metadata" poster="gif2.gif">
-            <source src="video.mp4" type="video/mp4"></source>
+          <video controls class="video" id="video" preload="metadata" poster="gif3.gif">
+            <source src="video3.mp4" type="video/mp4"></source>
           </video>
 
           <div class="video-controls hidden" id="video-controls">
@@ -131,23 +131,36 @@
           <div class="package">
             <img class="screenshot2" src="screenshot2.png" alt="Screenshot1">              
             <img class="screenshot1" src="screenshot1.png" alt="Screenshot1">  
+
+
+
+
+            <div class="TextBox">
+<br> <br> <br>     
+              <p class="info"> <i>  •  Dárek který<b> zaujme </b>  </i> </p> <br> <br> <br>              
+              <p class="info"> <i>  • <b>  Vaše vlastní </b> obrázky ve hře </i> </p> <br> <br> <br> 
+              <p class="info"> <i>  • Za <p class="daysCrossed"> <s> 5 dní </s> </p>  <p class="daysBig"> <b> 2 dny</b> </p>   hotovo </i> </p> 
+
+
+            </div>              
+          </div>
+          <div class="package2">
+            <img class="screenshot" src="pads.png" alt="Screenshot">              
             <p class="TextBoxTitle"> <b> Vytvořte si vlastní hru </b> </p class="TextBoxTitle">
 
 
 
             <div class="TextBox">
-              <br>
-              <p class="info"> <i>  • Za <p class="daysCrossed"> <s> 5 dní </s> </p>  <p class="daysBig"> <b> 2 dny</b> </p>   hotovo </i> </p> <br> <br> 
-              <p class="info"> <i>  • <b> Téměř kompletní </b> nastavení hry </i> </p> <br> <br> <br><br> 
-              <p class="info"> <i>  • <b> 189 <p class="TextBoxPriceKc"> Kč </p> </b>  </i> </p>
+              
+
+              <p class="info"> Vytvoříte si hru za 189 <p class="TextBoxPriceKc"> Kč </p> <p class="info"> a během 2 dnů <br> vám přijde na Váš e-mail odkaz nebo kód na stažení hry. </p> 
 
             </div>              
 
             <form action="GameChoice/gameChoice.html">
-                <button class="create" onclick='getPackage("Classic")'> Začít tvořit hru </button>
+                <button class="create" onclick='getPackage("Classic")'> <b> Začít tvořit hru </button>
               </form>
           </div>
-
       </div>
     </content>
   
