--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
-<html lang="cz"><head><meta charset="UTF-8">
+<html lang="cz"><head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1Y8BYT4ENK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1Y8BYT4ENK');
+</script>
+<meta charset="UTF-8">
   <head>
   <link rel="icon" type="jpg/png" href="pageIcon.png">
   <link rel="stylesheet" type="text/css" href="topnav.css">
