--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="cz"><head><meta charset="UTF-8">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1Y8BYT4ENK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1Y8BYT4ENK');
+</script>
   <title>Vlastní hry</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="">
@@ -8,14 +17,12 @@
   <link id="cssTopNav" rel="stylesheet" type="text/css" href="topnav.css">
   <link id="css" rel="stylesheet" type="text/css" href="index.css">
   <script>
-      function detectMob() {
-    return ( ( window.innerWidth <= 800 ) && ( window.innerHeight <= 600 ) );
-  }
+    function detectMob() {
+      return ((window.innerHeight / window.innerWidth) > 1.3);
+    }
   if(detectMob() == true){
     console.log("nig");
-    document.getElementById("css").href = "indexPhone.css";
-    document.getElementById("cssTopNav").href = "topnavPhone.css";
-    window.open("indexPhone.html", "_self");
+    window.open("indexMobile.html", "_self");
   }
   </script>
   </head><body>
