--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   gtag('config', 'G-1Y8BYT4ENK');
 </script>
+  <meta http-equiv='cache-control' content='no-cache'> 
+  <meta http-equiv='expires' content='0'> 
+  <meta http-equiv='pragma' content='no-cache'>
   <title>Vlastní hry</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="">
