--- a/GameChoice/Games/catching.html
+++ b/GameChoice/Games/catching.html
@@ -40,7 +40,7 @@
           <br>
           <p class="firstDescription"> Ovládání: <i> pohyb myši </i> </p>
           <br>
-          <p class="firstDescription"> Cíl hry: <i> sebrat co nejvíce jablek </i> </p>
+          <p class="firstDescription"> Cíl hry: <i> sebrat 5 jablek </i> </p>
           <iframe class="landscape" src="BuildCatching/CatchingGame.html"> </iframe>  
         </div>
         <div class="package" style="height: 400px;">
