--- a/GameChoice/Games/flappyBird.html
+++ b/GameChoice/Games/flappyBird.html
@@ -40,7 +40,7 @@
           <br>
           <p class="firstDescription"> Ovládání: <i> kliknutí myši </i> </p>
           <br>
-          <p class="firstDescription"> Cíl hry: <i> dostat se co nejdál </i> </p>
+          <p class="firstDescription"> Cíl hry: <i> dosáhnout 5 bodů </i> </p>
           <iframe class="portrait" src="BuildFlappyBird/FlappyBirdGame.html"> </iframe>  
         </div>
         <div class="package" style="height: 400px;">
