--- a/GameChoice/Games/snake.html
+++ b/GameChoice/Games/snake.html
@@ -40,7 +40,7 @@
           <br>
           <p class="firstDescription"> Ovládání: <i> šipky, w, a, s, d </i> </p>
           <br>
-          <p class="firstDescription"> Cíl hry: <i> sníst co nejvíce jablek </i> </p>
+          <p class="firstDescription"> Cíl hry: <i> sníst 5 jablek </i> </p>
           <iframe class="portrait" src="BuildSnake/SnakeGame.html"> </iframe>  
         </div>
         <div class="package" style="height: 400px;">
