--- a/GameChoice/gameChoice.html
+++ b/GameChoice/gameChoice.html
@@ -29,7 +29,7 @@
           <div class="TextBoxTitle">
             <p2> <b> Flappy Bird </b> </p2>
           </div>
-            <a href="Games/BuildFlappyBird/FlappyBirdGame.html" target="_blank">
+            <a href="Games/flappyBird.html" target="_blank">
               <img class="screenshot" src="Screenshots/FlappyBird.png" alt="icon">
             </a>
           <div class="TextBox">
@@ -43,7 +43,7 @@
           <div class="TextBoxTitle">
             <p2> <b> PacMan </b> </p2>
           </div>
-          <a href="Games/BuildPacman/PacmanGame.html" target="_blank">          
+          <a href="Games/pacman.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Pacman.png" alt="icon">
           </a>
           <div class="TextBox">
@@ -57,7 +57,7 @@
           <div class="TextBoxTitle">
             <p2> <b> Had </b> </p2>
           </div>
-          <a href="Games/BuildSnake/SnakeGame.html" target="_blank">          
+          <a href="Games/snake.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Snake.png" alt="icon">
           </a>
           <div class="TextBox">
@@ -71,7 +71,7 @@
           <div class="TextBoxTitle">
             <p2> <b> Sbírání co nejrychleji</b> </p2>
           </div>
-          <a href="Games/BuildCollecting/CollectingGame.html" target="_blank">          
+          <a href="Games/collecting.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Collecting.png" alt="icon">
           </a>
           <div class="TextBox">
@@ -84,7 +84,7 @@
           <div class="TextBoxTitle">
             <p2> <b> Chytání do košíku</b> </p2>
           </div>
-          <a href="Games/BuildCatching/CatchingGame.html" target="_blank">          
+          <a href="Games/catching.html" target="_blank">          
             <img class="screenshot" src="Screenshots/Catching.png" alt="icon">
           </a>
           <div class="TextBox">
