--- a/GameChoice/Games/BuildCatching/index.html
+++ b/GameChoice/Games/BuildCatching/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Sbírání jablek</title>
-    <link rel="shortcut icon"  href="../Catching/icon.png">
+    <title>Unity WebGL Player | Had</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
@@ -21,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Sbírání</div>
+        <div id="unity-build-title">Had</div>
       </div>
     </div>
     <script>
@@ -64,7 +63,7 @@
         codeUrl: buildUrl + "/BuildCatching.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "0805743",
-        productName: "chzt",
+        productName: "Had",
         productVersion: "1.50",
         showBanner: unityShowBanner,
       };
@@ -109,6 +108,9 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
+          fullscreenButton.onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
         }).catch((message) => {
           alert(message);
         });
