--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,7 @@
       </ul>
     </top>
     <p class="mainTitle">Kontaktní údaje: </p>
-    <p class="mainText">Email: rocek2232000@gmail.com</p>
+    <p class="mainText">Email: vlastnihry.zpetnavazba@gmail.com</p>
     <p class="mainText">Tel. číslo: 737 949 358</p>
-    <p class="mainText">Youtube:<a class="link" href="https://www.youtube.com/channel/UCrFokNQOmGlUoXmOG1VCkag">rocek</a> </p> 
   </body>
 </html>
