--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="cz"><head>
+  <meta name="facebook-domain-verification" content="j5yhk70i1rfeyouefdmbtx9k4lhyb6" />
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
