--- a/GameChoice/Games/collecting.html
+++ b/GameChoice/Games/collecting.html
@@ -57,7 +57,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
           <br>
           <p class="firstDescription"> Ovládání: <i> kliknutí myši </i> </p>
           <br>
-          <p class="firstDescription"> Cíl hry: <i> sezbírat co nejvíce hub <br> za 30 sekund </i> </p>
+          <p class="firstDescription"> Cíl hry: <i> sesbírat co nejvíce hub <br> za 30 sekund </i> </p>
           <iframe class="portrait" src="BuildCollecting/CollectingGame.html"> </iframe>  
         </div>
         <div class="package" style="height: 400px;">
