--- a/GameChoice/Games/paymentDone.html
+++ b/GameChoice/Games/paymentDone.html
@@ -40,7 +40,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
 
     <content> 
       <div class="centerContent">
-        <p class="doneTitle"> Děkujeme za váš nákup  </p>
+        <p class="doneTitle"> Máte hotovo  </p>
         <img class="successIcon" src="success.png"> 
         <p class="doneDescription" id="lol"> Za přibližně 3 dny vám přijde E-mail, s odkazem na stažení vaší dokončené hry. </p>
 
