--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
               <p class="info"> <i>  • Kompletní nastavení hry </i> </p>
 
             </div>            
-            <form action="GameChoice/gameChoice.html">
+            <form action="firstStep.html">
                 <button onclick='getPackage("Classic")'> Vybrat předlohu </button>
               </form>
           </div>
@@ -97,7 +97,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
               <p class="info"> <i>  • Kompletní nastavení hry </i> </p>
 
             </div>            
-            <form action="GameChoice/gameChoice.html">
+            <form action="firstStep.html">
                 <button onclick='getPackage("fast")'> Vybrat předlohu </button>
               </form>
           </div>
