--- a/landAdFacebook1.html
+++ b/landAdFacebook1.html
@@ -32,9 +32,17 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
   <link rel="stylesheet" href="">
   <link rel="icon" type="jpg/png" href="pageIcon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-   <link rel="stylesheet" href="videoSource/styleMobile.css" type="text/css">
-  <link id="css" rel="stylesheet" type="text/css" href="landMobile.css">
+   <link rel="stylesheet" href="videoSource/style.css" type="text/css">
+  <link id="css" rel="stylesheet" type="text/css" href="land.css">
 
+  <script>
+    function detectMob() {
+      return ((window.innerHeight / window.innerWidth) > 1.3);
+    }
+    if(detectMob() == true) {
+      window.open("landAdFacebook1Mobile.html", "_self");
+    }
+  </script>
 
   </head><body>
 
@@ -43,7 +51,7 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
   
 
 
-        <p class="mainTitle"> <b> Co dát blízkému jako dárek? </b> <br> <p class="mainText"> Darujte vlastní originální hru!</p>
+        <p class="mainTitle"> <b> Hra jako originální dárek? </b>
   
       </div>
       <div class="container">
@@ -148,7 +156,22 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
       <script src="videoSource/index.js"></script>
       <div id="offers">
 
+          <div class="package">
+            <img class="screenshot2" src="screenshot2.png" alt="Screenshot1">              
+            <img class="screenshot1" src="screenshot1.png" alt="Screenshot1">  
 
+
+
+
+            <div class="TextBox">
+<br> <br> <br>     
+              <p class="info">  •  Dárek, který<b> zaujme </b>  </i> </p> <br> <br> <br>              
+              <p class="info">  • <b>  Vaše vlastní </b> obrázky ve hře </i> </p> <br> <br> <br> 
+              <p class="info">  • Za <p class="daysCrossed"> <s> 5 dní </s> </p>  <p class="daysBig"> <b> 2 dny</b> </p>   hotovo </i> </p> 
+
+
+            </div>              
+          </div>
           <div class="package2">
             <img class="screenshot" src="pads.png" alt="Screenshot">              
             <p class="TextBoxTitle"> <b> Vytvořte si vlastní hru </b> </p class="TextBoxTitle">
