--- a/landAdFacebook1Mobile.html
+++ b/landAdFacebook1Mobile.html
@@ -43,7 +43,8 @@ src="https://www.facebook.com/tr?id=851063926673714&ev=PageView&noscript=1"
   
 
 
-        <p class="mainTitle"> <b> Co dát blízkému jako dárek? </b> <br> <p class="mainText"> Darujte vlastní originální hru!</p>
+        <p class="mainTitle"> <b> Hra jako originální dárek? </b>
+          
   
       </div>
       <div class="container">
